Iron gallery of Bravos/db-service.yml
apiVersion: v1
kind: Service
metadata:
  name: iron-db-service
  labels:
    db: mariadb
spec:
  type: "ClusterIP"
  selector:
    db: mariadb
  ports:
    - port: 3306
      targetPort: 3306
