Iron gallery of Bravos/iron-gallery-service.yml
apiVersion: v1
kind: Service
metadata:
  name: iron-gallery-service
  labels:
    run: iron-gallery
spec:
  type: "ClusterIP"
  selector:
    run: iron-gallery
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30099
