Iron gallery of Bravos/network-policy.yml
apiVersion: v1
kind: NetworkPolicy
metadata:
  name: iron-gallery-firewall
  namespace: default
spec:
  podSelector:
    matchLabels:
      db: mariadb
  policyTypes:
  - Ingress
  ingress:
  - from:
    - ipBlock:
        cidr: 172.17.0.0/16
        except:
        - 172.17.1.0/24
    - namespaceSelector:
        matchLabels:
          run: iron-gallery
    - podSelector:
        matchLabels:
          run: iron-gallery 
    ports:
    - protocol: TCP
      port: 3306
